Finished spaghetti recipe page.

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -14,5 +14,27 @@
     <p>Try this homemade spaghetti recipe today! This recipe has been passed down by the mighty Odin himself!</p>
     <p>Dine just like the old gods.....</p>
 
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Spaghetti Noodles</li>
+        <li>1 lb Ground Beef or Pork</li>
+        <li>Tomato Sauce</li>
+        <li>Garlic</li>
+        <li>Onion</li>
+        <li>Salt</li>
+        <li>Pepper</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Dice Onion & mince garlic.</li>
+        <li>Cook onion in pot until transluscent.</li>
+        <li>Add garlic and cook until fragrant.</li>
+        <li>Add ground meat and brown.</li>
+        <li>Add tomato sauce & simmer covered for 30 minutes.</li>
+        <li>While tomato sauce is simmering cook the noodles according to package directions.</li>
+        <li>Once the sauce has cooked down, add noodles to a bowl and top with sauce.</li>
+    </ol>
+
 </body>
 </html>
