Adding styling to page, nav bar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="navi">
+        <h1>Odin Recipes</h1>
+        <a href="./index.html">Home</a>
+    </div>
 
     <ul>
         <a href="./recipes/spaghetti.html">Spaghetti</a>
