--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <div class="navi">
+        <h1>Odin Recipes</h1>
+        <a href="../index.html">Home</a>
+    </div>
+    
     <h1>Spaghetti!</h1>
 
     <img src="../images/spaghetti.webp">
